[package]
name = "sunlight"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/puffyCid/sunlight"
description = "A very simple Protobuf binary parser"
categories = ["forensics"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
serde_json = "1.0.133"
base64 = "0.22.1"
