[package]
name = "sunlight"
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/puffyCid/sunlight"
description = "A very simple Protobuf binary parser"
keywords = ["forensics"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
serde_json = "1.0.139"
base64 = "0.22.1"
