[package]
name = "sunlight"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/puffyCid/sunlight"
description = "A very simple Protobuf binary parser"
keywords = ["forensics"]

[dependencies]
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
serde_json = "1.0.145"
base64 = "0.22.1"
